--- a/app/views/application/_kullanicipaneli2.html.erb
+++ b/app/views/application/_kullanicipaneli2.html.erb
@@ -52,12 +52,12 @@
 
 							<button style="margin-left: 10px;" type="button"
 							class="col-xs-3 col-sm-2 btn btn-danger">
-								<span style="font-size: 6px;">İncelediğim İlanlar</span>
+								<span style="font-size: 10px;">İncelediklerim</span>
 							</button>
 
 							<button style="margin-left: 10px;" type="button"
 							class="col-xs-3 col-sm-2 btn btn-info">
-								<span style="font-size: 8px;">Hesap Ayarları</span>
+								<span style="font-size: 9px;">Hesap Ayarları</span>
 							</button>
 
 						</div>
@@ -66,7 +66,7 @@
 
 							<button type="button"
 							class="col-xs-3 col-sm-2 btn btn-info">
-								<span style="font-size: 8px;">Fırsatlar Paneli</span>
+								<span style="font-size: 10px;">Fırsatlar</span>
 							</button>
 
 							<button style="margin-left:10px;" type="button" class="col-xs-3 col-sm-2 btn btn-primary">
