--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -213,7 +213,7 @@
 											<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 		
 													<div class="thumbnail">
-														<a href="/ikinciel/<%= advert.name.parameterize + '-' + advert.id.to_s %>">  
+														<a title='<%= advert.name %>' href="/ikinciel/<%= advert.name.parameterize + '-' + advert.id.to_s %>">  
 															<%= image_tag advert.images[0].imagefile(:small) %> </a>
 		
 													</div>
@@ -384,7 +384,7 @@
 												<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4">
 
 													<div class="thumbnail">
-														<a href="<%= path %><%= advert.name.parameterize + '-' + advert.id.to_s %>">  <%= image_tag advert.images[0].imagefile(:small) %> </a>
+														<a title='<%= advert.name %>' href="<%= path %><%= advert.name.parameterize + '-' + advert.id.to_s %>">  <%= image_tag advert.images[0].imagefile(:small) %> </a>
 			
 													</div>
 	
